--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    Hello user
+    <h4>Hello user</h4>
+    <p>
+    <form action="predict" method="post">
+        Please enter the experience:<input type="text" name="exp" placeholder="Experience">
+        <input type="submit">
+    </form>
+    </p>
 </body>
 </html>
